--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
     {
       "src": "./routes/(.*)",
       "dest": "./routes"
+    },
+    {
+      "src": "./(.*)",
+      "dest": "./index.js"
     }
   ]
 }
