--- a/vercel.json
+++ b/vercel.json
@@ -8,12 +8,9 @@
   ],
   "routes": [
     {
-      "src": "./routes/(.*)",
-      "dest": "./routes"
-    },
-    {
-      "src": "./(.*)",
-      "dest": "./index.js"
+      "src": "/(.*)",
+      "dest": "index.js",
+      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"]
     }
   ]
 }
